# space-recorder

./: .gitignore  Cargo.toml  README.md  plan.md  progress.txt  prompt.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: ascii-rendering-evals.md
specs/: 01-pty-host.md  02-camera-capture.md  03-ascii-renderer.md  04-tui.md  05-cli.md  README.md
specs/v1/: 00-core-pipeline.md  01-capture.md  02-audio.md  03-compositor.md  04-effects.md  05-config.md  06-cli.md
specs/v2/: 00-fal-video-overlay.md
src/: ascii.rs  camera.rs  capture.rs  cli.rs  config.rs  devices.rs  effects.rs  event_loop.rs  hotkeys.rs  input.rs  lib.rs  main.rs  permissions.rs  pipeline.rs  pipeline_config.rs  pty.rs  renderer.rs  terminal.rs
src/ascii/: braille.rs  charset.rs  dimensions.rs  downsample.rs  edges.rs  grayscale.rs  mapping.rs  mod.rs
src/camera/: capture.rs  capture_loop.rs  device.rs  frame_utils.rs  mod.rs  types.rs
src/capture/: errors.rs  mod.rs
src/cli/: args.rs  commands.rs  enums.rs  mod.rs
src/fal/: cache.rs  client.rs  mod.rs  overlay.rs  prompt.rs  retry.rs  video_replacement.rs
src/pty/: error.rs  host.rs  mod.rs  shell.rs  size.rs
src/terminal/: frame.rs  mod.rs  modal.rs  pty_buffer.rs  raw_mode.rs  rendering.rs  status_bar.rs  tui.rs
tests/: ascii_e2e.rs  ascii_unit.rs  ascii_visual.rs  cache_integration.rs  camera_e2e.rs  fal_client_tests.rs  fal_overlay_e2e.rs  terminal_unit.rs  tui_e2e.rs
tests/fixtures/: baseline_report.md
tests/fixtures/ascii_golden/: contrast_blocks_040x020.txt  contrast_standard_040x020.txt  (+12 more)
(+13 files in other folders)
