[package]
name = "space-recorder"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
nokhwa = { version = "0.10", features = ["input-avfoundation"] }
directories = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
image = "0.25"
